@@ -1,17 +1,11 @@
-/*package trainingTest;
+package trainingTest;
 
-import com.gym.dto.TrainingDto;
-import com.gym.entity.CustomerEntity;
-import com.gym.entity.InstructorEntity;
-import com.gym.entity.TrainingEntity;
-import com.gym.entity.TrainingTypeEntity;
+import com.gym.entity.*;
 import com.gym.repository.CustomerRepository;
 import com.gym.repository.InstructorRepository;
 import com.gym.repository.TrainingRepository;
 import com.gym.repository.TrainingTypeRepository;
-import com.gym.service.AuthenticationService;
 import com.gym.service.TrainingService;
-import com.gym.utils.Utils;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,12 +14,14 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.sql.Date;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
+import static com.gym.entity.TrainingType.CARDIO;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
 
 
 @ExtendWith(MockitoExtension.class)
@@ -38,120 +34,84 @@ public class TrainingServiceTest {
     private InstructorRepository instructorRepository;
     @Mock
     private TrainingTypeRepository trainingTypeRepository;
-    @Mock
-    private AuthenticationService authenticationService;
     @InjectMocks
     private TrainingService trainingService;
 
     @Test
     public void shouldCreateTraining() {
         //Given
-        String loginUserName = RandomStringUtils.randomAlphabetic(7);
-        String loginPassword = Utils.generatePassword();
-        TrainingDto trainingDto = new TrainingDto(1L, 1L, 1L, "Test.training", 1L,
-                Date.valueOf("2024-01-01"), 1);
-
-        CustomerEntity customerEntity = new CustomerEntity();
-        customerEntity.setId(1L);
-
-        InstructorEntity instructorEntity = new InstructorEntity();
-        instructorEntity.setId(1L);
-
-        TrainingTypeEntity trainingTypeEntity = new TrainingTypeEntity();
-        trainingTypeEntity.setId(1L);
-
-        TrainingEntity savedTraining = new TrainingEntity();
-        savedTraining.setId(1L);
-        savedTraining.setCustomer(customerEntity);
-        savedTraining.setInstructor(instructorEntity);
-        savedTraining.setTrainingType(trainingTypeEntity);
-        savedTraining.setTrainingName("Test.training");
-        savedTraining.setTrainingDate(Date.valueOf("2024-01-01"));
-        savedTraining.setTrainingDuration(1);
-
-        when(authenticationService.matchInstructorCredentials(loginUserName, loginPassword)).thenReturn(true);
-        when(customerRepository.findById(trainingDto.getCustomerId())).thenReturn(Optional.of(customerEntity));
-        when(instructorRepository.findById(trainingDto.getInstructorId())).thenReturn(Optional.of(instructorEntity));
-        when(trainingTypeRepository.findById(trainingDto.getTrainingTypeId())).thenReturn(Optional.of(trainingTypeEntity));
-        when(trainingRepository.save(any(TrainingEntity.class))).thenReturn(savedTraining);
-        //When
-        TrainingDto result = trainingService.createTraining(loginUserName, loginPassword, trainingDto);
-        //Assert
-        assertThat(result).isEqualTo(trainingDto);
-    }
-
-    @Test
-    public void shouldGetCustomerListOfTraining() {
-        //Given
-        CustomerEntity customerEntity = new CustomerEntity();
-        customerEntity.setId(1L);
-
-        InstructorEntity instructorEntity = new InstructorEntity();
-        instructorEntity.setId(1L);
-
-        TrainingTypeEntity trainingTypeEntity = new TrainingTypeEntity();
-        trainingTypeEntity.setId(1L);
-
+        String userNameForCustomer = RandomStringUtils.randomAlphabetic(7);
+        String userNameForInstructor = RandomStringUtils.randomAlphabetic(7);
         TrainingEntity trainingEntity = new TrainingEntity();
-        trainingEntity.setId(1L);
+        CustomerEntity customerEntity = new CustomerEntity();
+        InstructorEntity instructorEntity = new InstructorEntity();
+        TrainingTypeEntity trainingTypeEntity = new TrainingTypeEntity();
+        GymUserEntity gymUserEntityForCustomer = new GymUserEntity();
+        gymUserEntityForCustomer.setUserName(userNameForCustomer);
+        GymUserEntity gymUserEntityForInstructor = new GymUserEntity();
+        gymUserEntityForInstructor.setUserName(userNameForInstructor);
+        customerEntity.setGymUserEntity(gymUserEntityForCustomer);
+        instructorEntity.setGymUserEntity(gymUserEntityForInstructor);
+
+
         trainingEntity.setCustomer(customerEntity);
         trainingEntity.setInstructor(instructorEntity);
         trainingEntity.setTrainingType(trainingTypeEntity);
-        trainingEntity.setTrainingName(RandomStringUtils.randomAlphabetic(7));
-        trainingEntity.setTrainingDate(Date.valueOf("2024-01-01"));
-        trainingEntity.setTrainingDuration(1);
 
-        Date fromDate = Date.valueOf("2022-01-01");
-        Date toDate = Date.valueOf("2024-12-31");
-        String instructorName = RandomStringUtils.randomAlphabetic(7);
-        String trainingTypeName = RandomStringUtils.randomAlphabetic(7);
-
-        List<TrainingEntity> trainingEntities = List.of(trainingEntity);
-
-        when(trainingRepository.findTrainingsByCustomerAndCriteria(
-                customerEntity.getId(), fromDate, toDate, instructorName, trainingTypeName)).thenReturn(trainingEntities);
+        when(customerRepository.findCustomerEntityByGymUserEntityUserName(anyString()))
+                .thenReturn(customerEntity);
+        when(instructorRepository.findInstructorEntityByGymUserEntityUserName(anyString()))
+                .thenReturn(instructorEntity);
+        when(trainingTypeRepository.findByTrainingTypeName(any()))
+                .thenReturn(trainingTypeEntity);
+        when(trainingRepository.save(trainingEntity))
+                .thenReturn(trainingEntity);
         //When
-        List<TrainingDto> result = trainingService.getCustomerListOfTrainings(customerEntity, fromDate, toDate,
-                instructorName, trainingTypeName);
+        trainingService.createTraining(trainingEntity);
         //Assert
-        assertThat(result).isNotNull();
-        assertThat(result.size()).isEqualTo(1);
+        verify(customerRepository, times(1)).findCustomerEntityByGymUserEntityUserName(
+                anyString());
+        verify(instructorRepository, times(1)).findInstructorEntityByGymUserEntityUserName(
+                anyString());
+        verify(trainingTypeRepository, times(1)).findByTrainingTypeName(any());
+        verify(trainingRepository, times(1)).save(trainingEntity);
+    }
+
+    @Test
+    public void shouldGetCustomerListOfTrainings() {
+        //Given
+        String customerUserName = RandomStringUtils.randomAlphabetic(7);
+        Date fromDate = Date.valueOf("2024-01-01");
+        Date toDate = Date.valueOf("2024-03-03");
+        String instructorName = RandomStringUtils.randomAlphabetic(7);
+        TrainingType trainingTypeName = CARDIO;
+
+        List<TrainingEntity> expectedTrainings = Collections.singletonList(new TrainingEntity());
+        when(trainingRepository.findTrainingsByCustomerAndCriteria(customerUserName, fromDate, toDate,
+                instructorName, trainingTypeName))
+                .thenReturn(expectedTrainings);
+        //When
+        List<TrainingEntity> actualTrainings = trainingService.getCustomerListOfTrainings(customerUserName, fromDate,
+                toDate, instructorName, trainingTypeName);
+        //Assert
+        assertThat(actualTrainings).isEqualTo(expectedTrainings);
     }
 
     @Test
     public void shouldGetInstructorListOfTrainings() {
-        //Given
-        CustomerEntity customerEntity = new CustomerEntity();
-        customerEntity.setId(1L);
-
-        InstructorEntity instructorEntity = new InstructorEntity();
-        instructorEntity.setId(1L);
-
-        TrainingTypeEntity trainingTypeEntity = new TrainingTypeEntity();
-        trainingTypeEntity.setId(1L);
-
-        TrainingEntity trainingEntity = new TrainingEntity();
-        trainingEntity.setId(1L);
-        trainingEntity.setCustomer(customerEntity);
-        trainingEntity.setInstructor(instructorEntity);
-        trainingEntity.setTrainingType(trainingTypeEntity);
-        trainingEntity.setTrainingName(RandomStringUtils.randomAlphabetic(7));
-        trainingEntity.setTrainingDate(Date.valueOf("2024-01-01"));
-        trainingEntity.setTrainingDuration(1);
-
-        Date fromDate = Date.valueOf("2022-01-01");
-        Date toDate = Date.valueOf("2024-12-31");
+        String instructorUserName = RandomStringUtils.randomAlphabetic(7);
+        Date fromDate = Date.valueOf("2024-01-01");
+        Date toDate = Date.valueOf("2024-03-03");
         String customerName = RandomStringUtils.randomAlphabetic(7);
 
-        List<TrainingEntity> trainingEntities = List.of(trainingEntity);
+        List<TrainingEntity> expectedTrainings = Collections.singletonList(new TrainingEntity());
+        when(trainingRepository.findTrainingsByInstructorAndCriteria(instructorUserName, fromDate, toDate,
+                customerName))
+                .thenReturn(expectedTrainings);
 
-        when(trainingRepository.findTrainingsByInstructorAndCriteria(instructorEntity.getId(), fromDate, toDate, customerName))
-                .thenReturn(trainingEntities);
-        //When
-        List<TrainingDto> result = trainingService.getInstructorListOfTrainings(instructorEntity, fromDate, toDate,
-                customerName);
-        //Assert
-        assertThat(result).isNotNull();
-        assertThat(result.size()).isEqualTo(1);
+        List<TrainingEntity> actualTrainings = trainingService.getInstructorListOfTrainings(instructorUserName,
+                fromDate, toDate, customerName);
+
+        assertThat(actualTrainings).isEqualTo(expectedTrainings);
     }
-}*/
+}
